--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>NodeProp - Especializada em Soluções Digitais</title>
 	<meta name="description" content="Agência especializada em Marketing Digital, Criação de Aplicativos Mobile.">
 	<meta name="keywords" content="Agência digital, Marketing, Sites">
