--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 	<meta name="author" content="Rodrigo Oliveira">
 
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
 	<link rel="ico" href="img/ico.png">
 </head>
 <body>
-
+	<header class="cabecalho">
+		<a href="index.html"><h1 class="logo"> NodeProp - Especializada em Soluções Digitais </h1></a>
+	</header>
 </body>
 </html>
