Design Responsivo - Aula 07 - Nav (Jquery / Show e Hide)

--- a/index.html
+++ b/index.html
@@ -30,5 +30,14 @@
 			</ul>
 		</nav>
 	</header>
+	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+	<script>
+		$(".btn-menu").click(function(){
+			$(".menu").show();
+		});
+		$(".btn-close").click(function(){
+			$(".menu").hide();
+		});
+	</script>
 </body>
 </html>
