--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
 			</ul>
 		</nav>
 	</header>
+	<div class="banner">
+		<div class="title">
+			<h2> OUSE INOVAR! </h2>
+			<h3> Criamos experiências e estabelecemos ações estratégicas que conectam marcas e consumidores</h3>
+		</div>
+		<div class="buttons">
+			<button class="btn-cadastrar"> Cadastrar <i class="fa fa-arrow-circle-right"></i> </button>
+			<button class="btn-sobre"> Sobre <i class="fa fa-question-circle"></i> </button>
+		</div>
+	</div>
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 	<script>
 		$(".btn-menu").click(function(){
