--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<a href="index.html"><h1 class="logo"> NodeProp - Especializada em Soluções Digitais </h1></a>
 		<button class="btn-menu"> <i class="fa fa-bars fa-lg"></i> </button>
 		<nav class="menu">
-			<a class="btn-close">x</a>
+			<a class="btn-close"> <i class="fa fa-times"></i> </a>
 			<ul>
 				<li><a href="#">Home</a></li>
 				<li><a href="#">Clientes</a></li>
@@ -40,6 +40,32 @@
 			<button class="btn-sobre"> Sobre <i class="fa fa-question-circle"></i> </button>
 		</div>
 	</div>
+	<main class="servicos">
+		<article class="servico">
+			<a href="#"><img src="img/criacoes.jpg" alt="Campanhas publicitárias"></a>
+			<div class="inner">
+				<a href="#">Campanhas Publicitárias</a>
+				<h4>Impressoes, VTs e Jingles</h4>
+				<p>Se você está precisando de criação de algum material em especi´fico, conte com a nossa equipe de profissionais. Eles farão toda campanha publicitária, VT, outdoor, folder, anúncio e muito mais pela sua empresa no mais alto padrão de qualidade.</p>
+			</div>
+		</article>
+		<article class="servico">
+			<a href="#"><img src="img/md.jpg" alt="Marketing Digital"></a>
+			<div class="inner">
+				<a href="#">Marketing Digital</a>
+				<h4>Administração de Redes Sociais</h4>
+				<p>Como agência de publicidade aplicamos estratégias nos meios digitais para que o seu negócio seja visto por milhões de usuários. O Brasil é o 5º país mais conectado do mundo. Por este motivo, o seu negócio não pode ficar fora do mercado digital.</p>
+			</div>
+		</article>
+		<article class="servico">
+			<a href="#"><img src="img/cs.jpg" alt="Criação de Sites"></a>
+			<div class="inner">
+				<a href="#">Criação de Sites</a>
+				<h4>Sites administráveis</h4>
+				<p>Agora você pode administrar seu site como e como quiser. E melhor ainda pois você pode pagar por este serviço, pois desenvolvemos de forma. Seu site atualizado, com seus últimos produtos integração com redes sociais, agora é possível.</p>
+			</div>
+		</article>
+	</main>
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 	<script>
 		$(".btn-menu").click(function(){
