adição de comentários para separar seções

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<link rel="ico" href="img/ico.png">
 </head>
 <body>
+<!-- CABEÇALHO -->
 	<header class="cabecalho">
 		<a href="index.html"><h1 class="logo"> NodeProp - Especializada em Soluções Digitais </h1></a>
 		<button class="btn-menu"> <i class="fa fa-bars fa-lg"></i> </button>
@@ -30,6 +31,7 @@
 			</ul>
 		</nav>
 	</header>
+	<!-- BANNER -->
 	<div class="banner">
 		<div class="title">
 			<h2> OUSE INOVAR! </h2>
@@ -40,6 +42,7 @@
 			<button class="btn-sobre"> Sobre <i class="fa fa-question-circle"></i> </button>
 		</div>
 	</div>
+	<!-- SERVIÇOS -->
 	<main class="servicos">
 		<article class="servico">
 			<a href="#"><img src="img/criacoes.jpg" alt="Campanhas publicitárias"></a>
@@ -66,6 +69,7 @@
 			</div>
 		</article>
 	</main>
+	<!-- JQUERY -->
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 	<script>
 		$(".btn-menu").click(function(){
