--- a/index.html
+++ b/index.html
@@ -69,6 +69,15 @@
 			</div>
 		</article>
 	</main>
+	<!-- NEWSLETTER -->
+	<section class="newsletter">
+		<h2> Inscreva-se agora! </h2>
+		<h3> Receba novidades, dicas e muito mais </h3>
+		<form>
+			<input type="email" name="email" placeholder="Seu email">
+			<button> Cadastrar </button>
+		</form>
+	</section>
 	<!-- JQUERY -->
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 	<script>
