--- a/index.html
+++ b/index.html
@@ -78,6 +78,19 @@
 			<button> Cadastrar </button>
 		</form>
 	</section>
+	<!-- RODAPÉ -->
+	<footer class="rodape">
+		<div class="social-icons">
+			<a href="#"><i class="fa fa-facebook"></i></a>
+			<a href="#"><i class="fa fa-google"></i></a>
+			<a href="#"><i class="fa fa-twitter"></i></a>
+			<a href="#"><i class="fa fa-instagram"></i></a>
+			<a href="#"><i class="fa fa-envelope"></i></a>
+		</div>
+		<p class="copyright">
+			Copyright ₢ NodeProp 2016. Todos os direitos reservados.
+		</p>
+	</footer>
 	<!-- JQUERY -->
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 	<script>
