--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
 	<link rel="ico" href="img/ico.png">
 </head>
 <body>
+<div class="container">
 <!-- CABEÇALHO -->
 	<header class="cabecalho">
 		<a href="index.html"><h1 class="logo"> NodeProp - Especializada em Soluções Digitais </h1></a>
-		<button class="btn-menu"> <i class="fa fa-bars fa-lg"></i> </button>
+		<button class="btn-menu bg-gradient"> <i class="fa fa-bars fa-lg"></i> </button>
 		<nav class="menu">
 			<a class="btn-close"> <i class="fa fa-times"></i> </a>
 			<ul>
@@ -38,13 +39,13 @@
 			<h3> Criamos experiências e estabelecemos ações estratégicas que conectam marcas e consumidores</h3>
 		</div>
 		<div class="buttons">
-			<button class="btn-cadastrar"> Cadastrar <i class="fa fa-arrow-circle-right"></i> </button>
-			<button class="btn-sobre"> Sobre <i class="fa fa-question-circle"></i> </button>
+			<button class="btn btn-cadastrar bg-white radius"> Cadastrar <i class="fa fa-arrow-circle-right"></i> </button>
+			<button class="btn btn-sobre bg-black radius"> Sobre <i class="fa fa-question-circle"></i> </button>
 		</div>
 	</div>
 	<!-- SERVIÇOS -->
 	<main class="servicos">
-		<article class="servico">
+		<article class="servico bg-white radius">
 			<a href="#"><img src="img/criacoes.jpg" alt="Campanhas publicitárias"></a>
 			<div class="inner">
 				<a href="#">Campanhas Publicitárias</a>
@@ -52,7 +53,7 @@
 				<p>Se você está precisando de criação de algum material em especi´fico, conte com a nossa equipe de profissionais. Eles farão toda campanha publicitária, VT, outdoor, folder, anúncio e muito mais pela sua empresa no mais alto padrão de qualidade.</p>
 			</div>
 		</article>
-		<article class="servico">
+		<article class="servico bg-white radius">
 			<a href="#"><img src="img/md.jpg" alt="Marketing Digital"></a>
 			<div class="inner">
 				<a href="#">Marketing Digital</a>
@@ -60,7 +61,7 @@
 				<p>Como agência de publicidade aplicamos estratégias nos meios digitais para que o seu negócio seja visto por milhões de usuários. O Brasil é o 5º país mais conectado do mundo. Por este motivo, o seu negócio não pode ficar fora do mercado digital.</p>
 			</div>
 		</article>
-		<article class="servico">
+		<article class="servico bg-white radius">
 			<a href="#"><img src="img/cs.jpg" alt="Criação de Sites"></a>
 			<div class="inner">
 				<a href="#">Criação de Sites</a>
@@ -70,16 +71,16 @@
 		</article>
 	</main>
 	<!-- NEWSLETTER -->
-	<section class="newsletter">
+	<section class="newsletter bg-black">
 		<h2> Inscreva-se agora! </h2>
 		<h3> Receba novidades, dicas e muito mais </h3>
 		<form>
-			<input type="email" name="email" placeholder="Seu email">
-			<button> Cadastrar </button>
+			<input class="bg-black radius" type="email" name="email" placeholder="Seu email">
+			<button class="bg-white radius"> Cadastrar </button>
 		</form>
 	</section>
 	<!-- RODAPÉ -->
-	<footer class="rodape">
+	<footer class="rodape bg-gradient">
 		<div class="social-icons">
 			<a href="#"><i class="fa fa-facebook"></i></a>
 			<a href="#"><i class="fa fa-google"></i></a>
@@ -91,6 +92,7 @@
 			Copyright ₢ NodeProp 2016. Todos os direitos reservados.
 		</p>
 	</footer>
+</div>
 	<!-- JQUERY -->
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 	<script>
