--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
-	<link rel="ico" href="img/ico.png">
+	<link rel="icon" href="img/icon.png">
 </head>
 <body>
-<div class="container">
+
 <!-- CABEÇALHO -->
-	<header class="cabecalho">
+	<header class="cabecalho container">
 		<a href="index.html"><h1 class="logo"> NodeProp - Especializada em Soluções Digitais </h1></a>
 		<button class="btn-menu bg-gradient"> <i class="fa fa-bars fa-lg"></i> </button>
 		<nav class="menu">
@@ -33,7 +33,7 @@
 		</nav>
 	</header>
 	<!-- BANNER -->
-	<div class="banner">
+	<div class="banner container">
 		<div class="title">
 			<h2> OUSE INOVAR! </h2>
 			<h3> Criamos experiências e estabelecemos ações estratégicas que conectam marcas e consumidores</h3>
@@ -44,7 +44,7 @@
 		</div>
 	</div>
 	<!-- SERVIÇOS -->
-	<main class="servicos">
+	<main class="servicos container">
 		<article class="servico bg-white radius">
 			<a href="#"><img src="img/criacoes.jpg" alt="Campanhas publicitárias"></a>
 			<div class="inner">
@@ -71,7 +71,7 @@
 		</article>
 	</main>
 	<!-- NEWSLETTER -->
-	<section class="newsletter bg-black">
+	<section class="newsletter container bg-black">
 		<h2> Inscreva-se agora! </h2>
 		<h3> Receba novidades, dicas e muito mais </h3>
 		<form>
@@ -80,7 +80,7 @@
 		</form>
 	</section>
 	<!-- RODAPÉ -->
-	<footer class="rodape bg-gradient">
+	<footer class="rodape container bg-gradient">
 		<div class="social-icons">
 			<a href="#"><i class="fa fa-facebook"></i></a>
 			<a href="#"><i class="fa fa-google"></i></a>
@@ -92,7 +92,7 @@
 			Copyright ₢ NodeProp 2016. Todos os direitos reservados.
 		</p>
 	</footer>
-</div>
+
 	<!-- JQUERY -->
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 	<script>
